syntax = "proto3";
package MO.Protocol;

message Contacts{
	string WeiXinCode = 1;
	string QQGroup = 2;
	string WeiXinGroup = 3;
}